tests/ui/rust-2024/reserved-guarded-strings.stderr
error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:47:12
   |
LL |     demo2!(blah"xx");
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah "xx");
   |                +

error: prefix `blah` is unknown
  --> $DIR/reserved-guarded-strings.rs:48:12
   |
LL |     demo2!(blah#"xx"#);
   |            ^^^^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(blah #"xx"#);
   |                +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:48:16
   |
LL |     demo2!(blah#"xx"#);
   |                ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!(blah# "xx"#);
   |                 +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:52:17
   |
LL |     demo2!("foo"###);
   |                 ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!("foo"# ##);
   |                  +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:53:12
   |
LL |     demo2!(### "foo");
   |            ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!(# ## "foo");
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:54:17
   |
LL |     demo3!("foo"####);
   |                 ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!("foo"# ###);
   |                  +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:55:12
   |
LL |     demo3!(#### "foo");
   |            ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!(# ### "foo");
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:56:12
   |
LL |     demo3!(### "foo"#);
   |            ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!(# ## "foo"#);
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:57:12
   |
LL |     demo3!(### "foo"###);
   |            ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!(# ## "foo"###);
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:57:21
   |
LL |     demo3!(### "foo"###);
   |                     ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!(### "foo"# ##);
   |                      +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:60:12
   |
LL |     demo5!(#### "foo"####);
   |            ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo5!(# ### "foo"####);
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:60:22
   |
LL |     demo5!(#### "foo"####);
   |                      ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo5!(#### "foo"# ###);
   |                       +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:64:12
   |
LL |     demo1!(#"");
   |            ^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:65:12
   |
LL |     demo1!(#""#);
   |            ^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ""#);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:66:12
   |
LL |     demo1!(####"");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ###"");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:67:12
   |
LL |     demo1!(#"foo");
   |            ^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "foo");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:68:12
   |
LL |     demo1!(###"foo");
   |            ^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ##"foo");
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:69:12
   |
LL |     demo1!(#"foo"#);
   |            ^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# "foo"#);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:70:12
   |
LL |     demo1!(###"foo"#);
   |            ^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ##"foo"#);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:71:12
   |
LL |     demo1!(###"foo"##);
   |            ^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ##"foo"##);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:72:12
   |
LL |     demo1!(###"foo"###);
   |            ^^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo1!(# ##"foo"###);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:73:12
   |
LL |     demo3!(#"foo"###);
   |            ^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo3!(# "foo"###);
   |             +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:74:12
   |
LL |     demo2!(#"foo"####);
   |            ^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!(# "foo"####);
   |             +

error: reserved multi-hash token is forbidden
  --> $DIR/reserved-guarded-strings.rs:74:19
   |
LL |     demo2!(#"foo"####);
   |                   ^^^
   |
   = note: sequences of three or more # are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demo2!(#"foo"## ##);
   |                    +

error: invalid string literal
  --> $DIR/reserved-guarded-strings.rs:79:12
   |
LL | ...n!(####################################################################################################################################################################################################################################################################"foo...
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: unprefixed guarded string literals are reserved for future use since Rust 2024
help: consider inserting whitespace here
   |
LL |     demon!(# ###################################################################################################################################################################################################################################################################"foo");
   |             +

error: aborting due to 25 previous errors

